# ANNET

./: CMakeLists.txt  Doxyfile  README.md
src/: 2DArray.cpp  3DArray.cpp  AbsLayer.cpp  AbsNet.cpp  AbsNeuron.cpp  BPKernel.cu  BPLayer.cpp  BPNet.cpp  BPNetGPU.cpp  BPNeuron.cpp  Edge.cpp  Functions.cpp  HFKernel.cu  HFLayer.cpp  HFNet.cpp  HFNeuron.cpp  Matrix.cu  SOMKernel.cu  SOMLayer.cpp  SOMNet.cpp  SOMNetGPU.cpp  SOMNeuron.cpp  TrainingSet.cpp
src/include/: BPLayer.h  BPNet.h  BPNeuron.h  Containers  GPGPU  HFLayer.h  HFNet.h  HFNeuron.h  Net  SOMLayer.h  SOMNet.h  SOMNeuron.h
src/include/base/: AbsLayer.h  AbsNet.h  AbsNeuron.h  Edge.h  List.h
src/include/containers/: 2DArray.h  3DArray.h  ConTable.h  TrainingSet.h
src/include/gpgpu/: BPNetGPU.h  Kernels.h  Matrix.h  SOMNetGPU.h
src/include/math/: Functions.h  Random.h
